k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agriya-backend
  namespace: agriya
spec:
  selector:
    app: agriya-backend
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
